syntax = "proto3";

package service;

option go_package = "grpc/proto";

message Metric {
  int64 delta = 1;
  float value = 2;
  string id = 3;
  string mtype = 4;
}

message GetMetricRequest {
  Metric metric = 1;
}

message GetMetricResponse {
  Metric metric = 1;
}


message SetMetricRequest {
  Metric metric = 1;
}

message SetMetricResponse {
  Metric metric = 1;
}


message SetMetricsRequest {
  repeated Metric metric = 1;
}

message SetMetricsResponse {
  repeated Metric metric = 1;
}


message GetMetricsRequest {
}

message GetMetricsResponse {
  bytes html = 1;
}

service Metrics {
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
  rpc SetMetric(SetMetricRequest) returns (SetMetricResponse);
  rpc SetMetrics(SetMetricsRequest) returns (SetMetricsResponse);
  rpc GetMetrics(GetMetricsRequest) returns (GetMetricsResponse);
}
